added kaggle download

--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Introduction \n",
+    "\n",
+    "This tutorial shows the coordination between managed services to deploy machine learning functionality."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
