--- a/Data Prep.ipynb
+++ b/Data Prep.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,61 @@
      "output_type": "stream",
      "text": [
       "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/ec2-user/.kaggle/kaggle.json'\n",
-      "CommentsMarch2018.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\n",
+      "CommentsMarch2018.csv.zip: Downloaded 1MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 2MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 3MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 4MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 5MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 6MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 7MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 8MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 9MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 10MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 11MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 12MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 13MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 14MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 15MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 16MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 17MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 18MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 19MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 20MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 21MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 22MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 23MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 24MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 25MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 26MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 27MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 28MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 29MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 30MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 31MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 32MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 33MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 34MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 35MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 36MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 37MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 38MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 39MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 40MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 41MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 42MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 43MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 44MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 45MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 46MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 47MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 48MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 49MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 50MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 51MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 52MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 53MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 54MB of 54MB to .\r",
+      "CommentsMarch2018.csv.zip: Downloaded 54MB of 54MB to .\r\n",
       "\n",
       "\n"
      ]
@@ -57,10 +111,22 @@
    ],
    "source": [
     "from subprocess import Popen, PIPE\n",
-    "p1 = Popen([\"kaggle\",\"datasets\", \"download\", \"-d\", \"aashita/nyt-comments\", \"-f\", \"CommentsMarch2018.csv\"], stdout=PIPE, stderr=PIPE)\n",
+    "p1 = Popen([\"kaggle\",\"datasets\", \"download\", \"-d\", \"aashita/nyt-comments\", \"-f\", \"CommentsMarch2018.csv\", \"-w\"], stdout=PIPE, stderr=PIPE)\n",
     "resp = p1.communicate()\n",
     "print(resp[0].decode(\"utf-8\"))\n",
     "print(resp[1].decode(\"utf-8\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import zipfile\n",
+    "zip_ref = zipfile.ZipFile(\"CommentsMarch2018.csv.zip\", 'r')\n",
+    "zip_ref.extractall(\".\")\n",
+    "zip_ref.close()"
    ]
   },
   {
