uplaod dataset to s3

--- a/Data Prep.ipynb
+++ b/Data Prep.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,61 +49,61 @@
      "output_type": "stream",
      "text": [
       "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/ec2-user/.kaggle/kaggle.json'\n",
-      "CommentsMarch2018.csv.zip: Downloaded 1MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 2MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 3MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 4MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 5MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 6MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 7MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 8MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 9MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 10MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 11MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 12MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 13MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 14MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 15MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 16MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 17MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 18MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 19MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 20MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 21MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 22MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 23MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 24MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 25MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 26MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 27MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 28MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 29MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 30MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 31MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 32MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 33MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 34MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 35MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 36MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 37MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 38MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 39MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 40MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 41MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 42MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 43MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 44MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 45MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 46MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 47MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 48MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 49MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 50MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 51MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 52MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 53MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 54MB of 54MB to .\r",
-      "CommentsMarch2018.csv.zip: Downloaded 54MB of 54MB to .\r\n",
+      "CommentsMarch2018.csv.zip: Downloaded 1MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 2MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 3MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 4MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 5MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 6MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 7MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 8MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 9MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 10MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 11MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 12MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 13MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 14MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 15MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 16MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 17MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 18MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 19MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 20MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 21MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 22MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 23MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 24MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 25MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 26MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 27MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 28MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 29MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 30MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 31MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 32MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 33MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 34MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 35MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 36MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 37MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 38MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 39MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 40MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 41MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 42MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 43MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 44MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 45MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 46MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 47MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 48MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 49MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 50MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 51MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 52MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 53MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 54MB of 54MB to ./data\r",
+      "CommentsMarch2018.csv.zip: Downloaded 54MB of 54MB to ./data\r\n",
       "\n",
       "\n"
      ]
@@ -111,7 +111,7 @@
    ],
    "source": [
     "from subprocess import Popen, PIPE\n",
-    "p1 = Popen([\"kaggle\",\"datasets\", \"download\", \"-d\", \"aashita/nyt-comments\", \"-f\", \"CommentsMarch2018.csv\", \"-w\"], stdout=PIPE, stderr=PIPE)\n",
+    "p1 = Popen([\"kaggle\",\"datasets\", \"download\", \"-d\", \"aashita/nyt-comments\", \"-f\", \"CommentsMarch2018.csv\", \"-p\", \"./data\"], stdout=PIPE, stderr=PIPE)\n",
     "resp = p1.communicate()\n",
     "print(resp[0].decode(\"utf-8\"))\n",
     "print(resp[1].decode(\"utf-8\"))"
@@ -119,14 +119,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import zipfile\n",
-    "zip_ref = zipfile.ZipFile(\"CommentsMarch2018.csv.zip\", 'r')\n",
-    "zip_ref.extractall(\".\")\n",
+    "zip_ref = zipfile.ZipFile(\"./data/CommentsMarch2018.csv.zip\", 'r')\n",
+    "zip_ref.extractall(\"./data/\")\n",
     "zip_ref.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:sagemaker:Created S3 bucket: sagemaker-us-east-1-228889150161\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'s3://sagemaker-us-east-1-228889150161/data/nyt-comments'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sagemaker\n",
+    "\n",
+    "sagemaker_session = sagemaker.Session()\n",
+    "sagemaker_session.upload_data(path='data', key_prefix='data/nyt-comments')"
    ]
   },
   {
