preping for glue set up

--- a/Data Prep.ipynb
+++ b/Data Prep.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
        "'s3://sagemaker-us-east-1-228889150161/data/nyt-comments'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,6 +157,26 @@
     "\n",
     "sagemaker_session = sagemaker.Session()\n",
     "sagemaker_session.upload_data(path='data', key_prefix='data/nyt-comments')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'s3://sagemaker-us-east-1-228889150161/glue/nyt-comments'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sagemaker_session.upload_data(path='glue', key_prefix='glue/nyt-comments')"
    ]
   },
   {
