--- a/2. Glue Data Prep.ipynb
+++ b/2. Glue Data Prep.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -60,14 +60,14 @@
        " 'ResponseMetadata': {'HTTPHeaders': {'connection': 'keep-alive',\n",
        "   'content-length': '29',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'date': 'Fri, 01 Jun 2018 22:05:15 GMT',\n",
-       "   'x-amzn-requestid': 'dcd77b79-65e7-11e8-be74-79fa2354f605'},\n",
+       "   'date': 'Sat, 02 Jun 2018 00:51:34 GMT',\n",
+       "   'x-amzn-requestid': '18a98a2d-65ff-11e8-9a26-e3673eeba1bc'},\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'RequestId': 'dcd77b79-65e7-11e8-be74-79fa2354f605',\n",
+       "  'RequestId': '18a98a2d-65ff-11e8-9a26-e3673eeba1bc',\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,43 +84,45 @@
     "        'ScriptLocation':script_loc},\n",
     "    DefaultArguments={\n",
     "        '--job-language': 'scala',\n",
-    "        '--class': 'Tokenizer'\n",
+    "        '--class': 'Tokenizer',\n",
     "        '--extra-jars': sagemaker_jar,\n",
-    "        '--sagemaker-bucket': bucket\n",
+    "        '--sagemaker_bucket': bucket\n",
     "    })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'JobRunId': 'jr_65ef9d4b51bd131324926ca125b86cb77e48e05f2253c5d2211ed0d019ae3bf4',\n",
+       "{'JobRunId': 'jr_0249a7a7353017d8a2c93eb6b1b9b7b21166176640eff3a186434d89084589bf',\n",
        " 'ResponseMetadata': {'HTTPHeaders': {'connection': 'keep-alive',\n",
        "   'content-length': '82',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'date': 'Fri, 01 Jun 2018 22:08:13 GMT',\n",
-       "   'x-amzn-requestid': '46e152fc-65e8-11e8-a0fd-b56210d48105'},\n",
+       "   'date': 'Sat, 02 Jun 2018 00:56:33 GMT',\n",
+       "   'x-amzn-requestid': 'cb2119a0-65ff-11e8-87d5-efaa57ac0484'},\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'RequestId': '46e152fc-65e8-11e8-a0fd-b56210d48105',\n",
+       "  'RequestId': 'cb2119a0-65ff-11e8-87d5-efaa57ac0484',\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "client.start_job_run(JobName='sagemaker-nyt-prep', AllocatedCapacity=10)"
+    "client.start_job_run(JobName='sagemaker-nyt-prep', \n",
+    "                     AllocatedCapacity=10, \n",
+    "                     Arguments={'--sagemaker_bucket': bucket})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -128,38 +130,37 @@
       "text/plain": [
        "{'Job': {'AllocatedCapacity': 10,\n",
        "  'Command': {'Name': 'glueetl',\n",
-       "   'ScriptLocation': 's3://sagemaker-us-east-1-228889150161/glue/nyt-comments/gluetest'},\n",
+       "   'ScriptLocation': 's3://sagemaker-us-east-1-228889150161/glue/nyt-comments/tokenize.scala'},\n",
        "  'Connections': {},\n",
-       "  'CreatedOn': datetime.datetime(2018, 5, 31, 20, 56, 1, 125000, tzinfo=tzlocal()),\n",
-       "  'DefaultArguments': {'--TempDir': 's3://aws-glue-temporary-228889150161-us-east-1/root',\n",
-       "   '--class': 'Tokenizer',\n",
+       "  'CreatedOn': datetime.datetime(2018, 6, 1, 22, 23, 54, 395000, tzinfo=tzlocal()),\n",
+       "  'DefaultArguments': {'--class': 'Tokenizer',\n",
        "   '--extra-jars': 's3://sagemaker-us-east-1-228889150161/glue/nyt-comments/jars/sagemaker-spark_2.11-spark_2.2.0-1.0.5.jar',\n",
-       "   '--job-bookmark-option': 'job-bookmark-disable',\n",
        "   '--job-language': 'scala',\n",
-       "   'dataset.bucket': 'foo'},\n",
+       "   '--sagemaker-bucket': 'sagemaker-us-east-1-228889150161'},\n",
+       "  'Description': 'Spark ML job to create a bag-of-words vector',\n",
        "  'ExecutionProperty': {'MaxConcurrentRuns': 1},\n",
-       "  'LastModifiedOn': datetime.datetime(2018, 6, 1, 21, 48, 9, 886000, tzinfo=tzlocal()),\n",
+       "  'LastModifiedOn': datetime.datetime(2018, 6, 1, 22, 23, 54, 395000, tzinfo=tzlocal()),\n",
        "  'MaxRetries': 0,\n",
-       "  'Name': 'test2',\n",
+       "  'Name': 'sagemaker-nyt-prep',\n",
        "  'Role': 'arn:aws:iam::228889150161:role/SageMakerTutorialRole',\n",
        "  'Timeout': 2880},\n",
        " 'ResponseMetadata': {'HTTPHeaders': {'connection': 'keep-alive',\n",
        "   'content-length': '715',\n",
        "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'date': 'Fri, 01 Jun 2018 22:22:59 GMT',\n",
-       "   'x-amzn-requestid': '56f63a23-65ea-11e8-b1d0-97837f8dc5b9'},\n",
+       "   'date': 'Fri, 01 Jun 2018 22:24:15 GMT',\n",
+       "   'x-amzn-requestid': '8458e1c8-65ea-11e8-81c3-83bc213e7517'},\n",
        "  'HTTPStatusCode': 200,\n",
-       "  'RequestId': '56f63a23-65ea-11e8-b1d0-97837f8dc5b9',\n",
+       "  'RequestId': '8458e1c8-65ea-11e8-81c3-83bc213e7517',\n",
        "  'RetryAttempts': 0}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "client.get_job(JobName='test2')"
+    "client.get_job(JobName='sagemaker-nyt-prep')"
    ]
   },
   {
