working mock function

--- a/4. Mock Lambda Function.ipynb
+++ b/4. Mock Lambda Function.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,13 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json \n",
     "import re \n",
     "from collections import Counter\n",
+    "import boto3\n",
+    "import io\n",
     "\n",
     "def load_vocab():\n",
     "    with open('vocab.json', 'r') as json_file:\n",
@@ -61,25 +63,52 @@
     "    features = { \"keys\": keys, \"shape\": [1000],\"values\": values }\n",
     "    \n",
     "    ntm_input = {\"instances\":[{\"data\": {\"features\": features}}]}\n",
+    "    req_body = json.dumps(ntm_input)\n",
+    "    print(req_body)\n",
     "    \n",
-    "    return ntm_input"
+    "    client = boto3.client('sagemaker-runtime')\n",
+    "    resp = client.invoke_endpoint(\n",
+    "        EndpointName='ntm-nyt',\n",
+    "        Body=req_body.encode('utf-8'),\n",
+    "        ContentType='application/json',\n",
+    "        Accept='application/json'\n",
+    "    )\n",
+    "        \n",
+    "    predictions = json.load(resp[\"Body\"])\n",
+    "    return predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'instances': [{'data': {'features': {'keys': [15, 186, 275, 414, 416, 486, 579, 599, 849], 'shape': [1000], 'values': [1, 1, 1, 1, 1, 1, 1, 1, 1]}}}]}\n"
+      "{\"instances\": [{\"data\": {\"features\": {\"keys\": [15, 186, 275, 414, 416, 486, 579, 599, 849], \"shape\": [1000], \"values\": [1, 1, 1, 1, 1, 1, 1, 1, 1]}}}]}\n"
      ]
     }
    ],
    "source": [
-    "response = mock_function(test_event, test_context)\n",
+    "response = mock_function(test_event, test_context)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'predictions': [{'topic_weights': [0.049695503, 0.0527563505, 0.0490425341, 0.0609627143, 0.0683583915, 0.0421626978, 0.0433707982, 0.058722306, 0.036552988, 0.0425718091, 0.048611436, 0.0549974181, 0.0513481162, 0.0382936932, 0.0424936749, 0.0486433618, 0.040738333, 0.0580059662, 0.0668672547, 0.045804657]}]}\n"
+     ]
+    }
+   ],
+   "source": [
     "print(response)"
    ]
   },
