--- a/4. Mock Lambda Function.ipynb
+++ b/4. Mock Lambda Function.ipynb
@@ -29,12 +29,22 @@
     "\n",
     "s3 = boto3.resource('s3')\n",
     "obj = s3.Object('sagemaker-us-east-1-228889150161','data/nyt-features/vocab.json')\n",
-    "obj.download_file('vocab.json')\n"
+    "obj.download_file('vocab.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "os.environ['ENDPOINT'] = 'ntm-nyt'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +53,8 @@
     "from collections import Counter\n",
     "import boto3\n",
     "import io\n",
+    "import os\n",
+    "\n",
     "\n",
     "def load_vocab():\n",
     "    with open('vocab.json', 'r') as json_file:\n",
@@ -68,7 +80,7 @@
     "    \n",
     "    client = boto3.client('sagemaker-runtime')\n",
     "    resp = client.invoke_endpoint(\n",
-    "        EndpointName='ntm-nyt',\n",
+    "        EndpointName=os.environ['ENDPOINT'],\n",
     "        Body=req_body.encode('utf-8'),\n",
     "        ContentType='application/json',\n",
     "        Accept='application/json'\n",
@@ -80,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -97,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +129,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sagemaker\n",
+    "sagemaker_session = sagemaker.Session()\n",
+    "sagemaker_session.delete_endpoint('ntm-nyt')"
+   ]
   }
  ],
  "metadata": {
