cleaner upload and details on Glue.

--- a/2. Glue Data Prep.ipynb
+++ b/2. Glue Data Prep.ipynb
@@ -1,51 +1,59 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import boto3 \n",
-    "client = boto3.client('glue')"
+    "# Data Prep with AWS Glue\n",
+    "\n",
+    "While the New Times Dataset could be prepared in a notebook, this tutorial preps the dataset with Spark ML.  The spark job runs on a managed spark cluster, Amazon Glue.  Glue provides ETL (Extract, Transfom, and Load) functionality for a data warehouse.  This apporach allows for automated updates when the dataset changes.\n",
+    "\n",
+    "> Note: This isn't the only apporach.  The data prep could be preformed by a series of containerized micro-services and or a lambda functions. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arn:aws:iam::228889150161:role/SageMakerTutorialRole\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "INFO:sagemaker:Created S3 bucket: sagemaker-us-east-1-228889150161\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sagemaker-us-east-1-228889150161\n"
-     ]
     }
    ],
    "source": [
+    "#Note: We're only using the sagemaker api here to look up the S3 bucket and the exectution role.\n",
+    "\n",
     "import sagemaker\n",
     "from sagemaker import get_execution_role\n",
     "role = get_execution_role()\n",
-    "print(role)\n",
     "\n",
     "sagemaker_session = sagemaker.Session()\n",
-    "bucket = sagemaker_session.default_bucket()\n",
-    "print(bucket)"
+    "bucket = sagemaker_session.default_bucket()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a Glue Job\n",
+    "\n",
+    "It this cell, we create a glue job that runs a scala/spark script.\n",
+    "\n",
+    "The Job executes the following tasks.\n",
+    "1. Tokenizes the comment text. \n",
+    "2. Removes stop words.\n",
+    "3. Creates a vocabulary\n",
+    "4. Creates bag-of-words (i.e. word counts in the comment)\n",
+    "5. Saves the bag-of-words representation in a SageMaker friendly format.\n",
+    "\n",
+    "The Job produces the following outputs.\n",
+    "1. Vocabulary of the top N words.\n",
+    "2. Sample validation data (TBD)\n",
+    "3. The tranining data in a RecordIO/Protocol Buffer format."
    ]
   },
   {
@@ -73,6 +81,9 @@
     }
    ],
    "source": [
+    "import boto3 \n",
+    "client = boto3.client('glue')\n",
+    "\n",
     "script_loc = 's3://{}/glue/nyt-comments/tokenize.scala'.format(bucket)\n",
     "sagemaker_jar = 's3://{}/glue/nyt-comments/jars/sagemaker-spark_2.11-spark_2.2.0-1.0.5.jar'.format(bucket)\n",
     "\n",
