--- a/1. Dataset Upload.ipynb
+++ b/1. Dataset Upload.ipynb
@@ -11,23 +11,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting kaggle\n",
+      "  Downloading https://files.pythonhosted.org/packages/74/9b/a6bdc22939c32e1cecc086a972b5e3f7c991b73d74dab0e5d82ff80c5968/kaggle-1.3.8.tar.gz\n",
+      "Requirement already satisfied: urllib3>=1.15 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from kaggle)\n",
+      "Requirement already satisfied: six>=1.10 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from kaggle)\n",
+      "Requirement already satisfied: certifi in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from kaggle)\n",
+      "Requirement already satisfied: python-dateutil in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from kaggle)\n",
+      "Requirement already satisfied: requests in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from kaggle)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from requests->kaggle)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in /home/ec2-user/anaconda3/envs/python3/lib/python3.6/site-packages (from requests->kaggle)\n",
+      "Building wheels for collected packages: kaggle\n",
+      "  Running setup.py bdist_wheel for kaggle ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/ec2-user/.cache/pip/wheels/d6/3c/92/375decc0cf0a65b281db3cca9b8e21dc27b8ebc4d1ce29afca\n",
+      "Successfully built kaggle\n",
+      "Installing collected packages: kaggle\n",
+      "Successfully installed kaggle-1.3.8\n",
+      "\u001b[33mYou are using pip version 9.0.1, however version 10.0.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
     }
    ],
    "source": [
-    "from subprocess import call\n",
-    "call([\"pip\",\"install\",\"kaggle\"])"
+    "!pip install kaggle"
    ]
   },
   {
@@ -36,85 +48,26 @@
    "source": [
     "## API credentials\n",
     "\n",
-    "To use the Kaggle API, sign up for a Kaggle account at https://www.kaggle.com. Then go to the 'Account' tab of your user profile (`https://www.kaggle.com/<username>/account`) and select 'Create API Token'. This will trigger the download of `kaggle.json`, a file containing your API credentials. Place this file in the location `~/.kaggle/kaggle.json`"
+    "To use the Kaggle API, sign up for a Kaggle account at https://www.kaggle.com. Then go to the 'Account' tab of your user profile (`https://www.kaggle.com/<username>/account`) and select 'Create API Token'. This will trigger the download of `kaggle.json`, a file containing your API credentials. Place this file in the location `~/SageMaker/.kaggle/kaggle.json` so that it will be persevered between SageMaker sessions."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/ec2-user/.kaggle/kaggle.json'\n",
-      "CommentsMarch2018.csv.zip: Downloaded 1MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 2MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 3MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 4MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 5MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 6MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 7MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 8MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 9MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 10MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 11MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 12MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 13MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 14MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 15MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 16MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 17MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 18MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 19MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 20MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 21MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 22MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 23MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 24MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 25MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 26MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 27MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 28MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 29MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 30MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 31MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 32MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 33MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 34MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 35MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 36MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 37MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 38MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 39MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 40MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 41MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 42MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 43MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 44MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 45MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 46MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 47MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 48MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 49MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 50MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 51MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 52MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 53MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 54MB of 54MB to ./data\r",
-      "CommentsMarch2018.csv.zip: Downloaded 54MB of 54MB to ./data\r\n",
-      "\n",
-      "\n"
+      "CommentsMarch2018.csv.zip: Skipping, found more recently modified local copy (use --force to force download)\r\n"
      ]
     }
    ],
    "source": [
-    "from subprocess import Popen, PIPE\n",
-    "p1 = Popen([\"kaggle\",\"datasets\", \"download\", \"-d\", \"aashita/nyt-comments\", \"-f\", \"CommentsMarch2018.csv\", \"-p\", \"./data\"], stdout=PIPE, stderr=PIPE)\n",
-    "resp = p1.communicate()\n",
-    "print(resp[0].decode(\"utf-8\"))\n",
-    "print(resp[1].decode(\"utf-8\"))"
+    "!cp -R ~/SageMaker/.kaggle ~/\n",
+    "!chmod 600 ~/.kaggle/kaggle.json\n",
+    "!kaggle datasets download -d aashita/nyt-comments -f CommentsMarch2018.csv -p ./data"
    ]
   },
   {
@@ -127,6 +80,15 @@
     "zip_ref = zipfile.ZipFile(\"./data/CommentsMarch2018.csv.zip\", 'r')\n",
     "zip_ref.extractall(\"./data/\")\n",
     "zip_ref.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## S3 Dataset and Glue Code Upload\n",
+    "\n",
+    "Sagemaker provides a utility function to upload entire directories to S3.  It's a little easier to use than the boto3 API. "
    ]
   },
   {
