--- a/4. Mock Lambda Function.ipynb
+++ b/4. Mock Lambda Function.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "    #https://docs.aws.amazon.com/sagemaker/latest/dg/cdf-inference.html\n",
     "    keys = sorted(counts.keys())\n",
     "    values = list(map(lambda key: counts[key], keys))\n",
-    "    features = { \"keys\": keys, \"shape\": [1000],\"values\": values }\n",
+    "    features = { \"keys\": keys, \"shape\": [len(vocab)],\"values\": values }\n",
     "    \n",
     "    ntm_input = {\"instances\":[{\"data\": {\"features\": features}}]}\n",
     "    req_body = json.dumps(ntm_input)\n",
@@ -92,34 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\"instances\": [{\"data\": {\"features\": {\"keys\": [15, 186, 275, 414, 416, 486, 579, 599, 849], \"shape\": [1000], \"values\": [1, 1, 1, 1, 1, 1, 1, 1, 1]}}}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "response = mock_function(test_event, test_context)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'predictions': [{'topic_weights': [0.049695503, 0.0527563505, 0.0490425341, 0.0609627143, 0.0683583915, 0.0421626978, 0.0433707982, 0.058722306, 0.036552988, 0.0425718091, 0.048611436, 0.0549974181, 0.0513481162, 0.0382936932, 0.0424936749, 0.0486433618, 0.040738333, 0.0580059662, 0.0668672547, 0.045804657]}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(response)"
    ]
@@ -134,6 +118,13 @@
     "sagemaker_session = sagemaker.Session()\n",
     "sagemaker_session.delete_endpoint('ntm-nyt')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
