--- a/4. Mock Lambda Function.ipynb
+++ b/4. Mock Lambda Function.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_comment = \"The unquestioned value of crypto currencies is that they provide an easy way for organized crime syndicates of all stripes to launder their ill gotten millions and billions while making suckers out of governments and the rest of us.\"\n",
+    "test_comment = \"The focus on raising the age of gun buyers to 21 is not random: Individuals ages 18 to 20 commit homicides using guns at a rate that’s four times higher than the rate for those over 21, according to Everytown for Gun Safety, using F.B.I. and census data.\\\"<br/><br/>No, it may not be RANDOM, but this statement is highly DECEPTIVE. The overwhelming majority of homicides are committed with illegal handguns. Those who possess them are not purchasing them at retail stores using credit cards and submitting to NICS background checks. They are most often young, frequently gang members, and associated with the drug trade.<br/>In virtually all cases, statistics from Everytown can be shown to be distortions of legitimate FBI, DoJ, and census data.\"\n",
     "\n",
     "test_event = {'comment': test_comment}\n",
     "test_context = None"
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,20 +92,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"instances\": [{\"data\": {\"features\": {\"keys\": [26, 27, 77, 80, 102, 158, 238, 243, 246, 317, 323, 410, 468, 471, 550, 687, 738, 786, 798, 846, 869, 912, 961, 1058, 1070, 1081, 1128, 1200, 1243, 1270, 1363, 1851, 1852, 2137, 2173, 2295, 2527, 2559, 2638, 2765, 2828, 3137, 3449, 3690, 4185, 4417, 4599, 4854], \"shape\": [5000], \"values\": [1, 2, 1, 1, 1, 1, 1, 1, 2, 1, 3, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 1, 1, 1, 1, 1]}}}]}\n"
+     ]
+    }
+   ],
    "source": [
     "response = mock_function(test_event, test_context)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'predictions': [{'topic_weights': [0.0234206449, 0.0219569486, 0.0244625956, 0.0242984146, 0.0238350872, 0.0264372826, 0.0243257564, 0.0230258852, 0.1415586621, 0.0268683769, 0.0247516725, 0.3408972621, 0.0275082532, 0.0235611908, 0.0246553216, 0.1024556607, 0.0240754802, 0.0239798501, 0.0235598832, 0.0243657827]}]}\n"
+     ]
+    }
+   ],
    "source": [
     "print(response)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0234206449,\n",
+       " 0.0219569486,\n",
+       " 0.0244625956,\n",
+       " 0.0242984146,\n",
+       " 0.0238350872,\n",
+       " 0.0264372826,\n",
+       " 0.0243257564,\n",
+       " 0.0230258852,\n",
+       " 0.1415586621,\n",
+       " 0.0268683769,\n",
+       " 0.0247516725,\n",
+       " 0.3408972621,\n",
+       " 0.0275082532,\n",
+       " 0.0235611908,\n",
+       " 0.0246553216,\n",
+       " 0.1024556607,\n",
+       " 0.0240754802,\n",
+       " 0.0239798501,\n",
+       " 0.0235598832,\n",
+       " 0.0243657827]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "weigths = response['predictions'][0]['topic_weights']\n",
+    "w = np.asarray(weigths)\n",
+    "np.argmax(w, axis=)"
    ]
   },
   {
