more documentation on Glue

--- a/2. Glue Data Prep.ipynb
+++ b/2. Glue Data Prep.ipynb
@@ -41,19 +41,22 @@
    "source": [
     "# Create a Glue Job\n",
     "\n",
-    "It this cell, we create a glue job that runs a scala/spark script.\n",
+    "In this cell, we create a glue job that runs a scala/spark script.\n",
     "\n",
     "The Job executes the following tasks.\n",
-    "1. Tokenizes the comment text. \n",
-    "2. Removes stop words.\n",
-    "3. Creates a vocabulary\n",
-    "4. Creates bag-of-words (i.e. word counts in the comment)\n",
-    "5. Saves the bag-of-words representation in a SageMaker friendly format.\n",
+    "1. Removes HTML Markup\n",
+    "2. Tokenizes the comment text. \n",
+    "3. Removes stop words.\n",
+    "4. Creates a vocabulary.\n",
+    "5. Creates bag-of-words (i.e. word counts in the comment)\n",
+    "6. Saves the bag-of-words representation in a SageMaker friendly format.\n",
     "\n",
     "The Job produces the following outputs.\n",
     "1. Vocabulary of the top N words.\n",
     "2. Sample validation data (TBD)\n",
-    "3. The tranining data in a RecordIO/Protocol Buffer format."
+    "3. The tranining data in a RecordIO/Protocol Buffer format.\n",
+    "\n",
+    "For a deeper explanation of the Bag-of-Words repersentation, see the data prepartion [this example](https://github.com/awslabs/amazon-sagemaker-examples/blob/master/introduction_to_applying_machine_learning/ntm_20newsgroups_topic_modeling/ntm_20newsgroups_topic_model.ipynb)."
    ]
   },
   {
@@ -102,6 +105,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Start the Job\n",
+    "\n",
+    "The job's status and logs are accessable via the AWS Console.\n",
+    "\n",
+    "![Job Status](images/GlueJobStatus.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
@@ -132,46 +146,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Job': {'AllocatedCapacity': 10,\n",
-       "  'Command': {'Name': 'glueetl',\n",
-       "   'ScriptLocation': 's3://sagemaker-us-east-1-228889150161/glue/nyt-comments/tokenize.scala'},\n",
-       "  'Connections': {},\n",
-       "  'CreatedOn': datetime.datetime(2018, 6, 1, 22, 23, 54, 395000, tzinfo=tzlocal()),\n",
-       "  'DefaultArguments': {'--class': 'Tokenizer',\n",
-       "   '--extra-jars': 's3://sagemaker-us-east-1-228889150161/glue/nyt-comments/jars/sagemaker-spark_2.11-spark_2.2.0-1.0.5.jar',\n",
-       "   '--job-language': 'scala',\n",
-       "   '--sagemaker-bucket': 'sagemaker-us-east-1-228889150161'},\n",
-       "  'Description': 'Spark ML job to create a bag-of-words vector',\n",
-       "  'ExecutionProperty': {'MaxConcurrentRuns': 1},\n",
-       "  'LastModifiedOn': datetime.datetime(2018, 6, 1, 22, 23, 54, 395000, tzinfo=tzlocal()),\n",
-       "  'MaxRetries': 0,\n",
-       "  'Name': 'sagemaker-nyt-prep',\n",
-       "  'Role': 'arn:aws:iam::228889150161:role/SageMakerTutorialRole',\n",
-       "  'Timeout': 2880},\n",
-       " 'ResponseMetadata': {'HTTPHeaders': {'connection': 'keep-alive',\n",
-       "   'content-length': '715',\n",
-       "   'content-type': 'application/x-amz-json-1.1',\n",
-       "   'date': 'Fri, 01 Jun 2018 22:24:15 GMT',\n",
-       "   'x-amzn-requestid': '8458e1c8-65ea-11e8-81c3-83bc213e7517'},\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'RequestId': '8458e1c8-65ea-11e8-81c3-83bc213e7517',\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "client.get_job(JobName='sagemaker-nyt-prep')"
+    "# View the Labeled Dataset\n",
+    "\n",
+    "If a Glue crawls the jobs results ```s3://sagemaker-bucket/data/nyt-features/labeled_data.parquet```, then the labeled data is viewable via Athena.\n",
+    "\n",
+    "![Athena Query](images/AthenaQuery.png)"
    ]
   },
   {
