--- a/4. Mock Lambda Function.ipynb
+++ b/4. Mock Lambda Function.ipynb
@@ -126,35 +126,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.0234206449,\n",
-       " 0.0219569486,\n",
-       " 0.0244625956,\n",
-       " 0.0242984146,\n",
-       " 0.0238350872,\n",
-       " 0.0264372826,\n",
-       " 0.0243257564,\n",
-       " 0.0230258852,\n",
-       " 0.1415586621,\n",
-       " 0.0268683769,\n",
-       " 0.0247516725,\n",
-       " 0.3408972621,\n",
-       " 0.0275082532,\n",
-       " 0.0235611908,\n",
-       " 0.0246553216,\n",
-       " 0.1024556607,\n",
-       " 0.0240754802,\n",
-       " 0.0239798501,\n",
-       " 0.0235598832,\n",
-       " 0.0243657827]"
+       "11"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +144,7 @@
     "import numpy as np\n",
     "weigths = response['predictions'][0]['topic_weights']\n",
     "w = np.asarray(weigths)\n",
-    "np.argmax(w, axis=)"
+    "np.argmax(w, axis=0)"
    ]
   },
   {
