more comments and documentation

--- a/3. NY Times - Neural Topic Model.ipynb
+++ b/3. NY Times - Neural Topic Model.ipynb
@@ -1733,7 +1733,7 @@
    "source": [
     "## Model Exploration \n",
     "\n",
-    "This next section is based on [\"An Introduction to SageMaker Neural Topic Model\"](https://github.com/awslabs/amazon-sagemaker-examples/blob/master/introduction_to_applying_machine_learning/ntm_20newsgroups_topic_modeling/ntm_20newsgroups_topic_model.ipynb).  While this section is not required for model deployment, it does offer some explaination of the topic. "
+    "This next section is based on [\"An Introduction to SageMaker Neural Topic Model\"](https://github.com/awslabs/amazon-sagemaker-examples/blob/master/introduction_to_applying_machine_learning/ntm_20newsgroups_topic_modeling/ntm_20newsgroups_topic_model.ipynb).  While this section isn't required for model deployment, it does offer some explaination the model's generated topics."
    ]
   },
   {
