--- a/4. Mock Lambda Function.ipynb
+++ b/4. Mock Lambda Function.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Mock Lambda Function"
+    "# Mock Lambda Function\n",
+    "\n",
+    "This next notebook simulates a lambda function calling the NTM model deployed in the previous notebook.  In reality, the deployed model might be a small component in a large application or pipeline.  In this example, the lambda function takes a plain text comment as an input and returns topic probabilities. \n",
+    "\n",
+    "The test comment is below.  We'll wrap the comment in a lambda event (i.e. json).  "
    ]
   },
   {
@@ -20,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The mock lambda function requires the vocabulary created by the Glue job.  Let's assume the vocabulary file is packaged with lambda function and accessable on the local file system."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -30,6 +41,13 @@
     "s3 = boto3.resource('s3')\n",
     "obj = s3.Object('sagemaker-us-east-1-228889150161','data/nyt-features/vocab.json')\n",
     "obj.download_file('vocab.json')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Amazon lambda function can access environment variable.  Let's make the Sagemaker Endpoint a configurable option."
    ]
   },
   {
